# authentication-system-leak-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Stored_proc.sql  TODO_mail_service.py  app.py  auth_system.py  cmdline_driver.py  compare_alg.py  database_controller.py  dev-requirements.txt  email_service.py  init.py  initialize_database.sql  launch.bat  launch.sh  lin_cmdline.sh  lin_mail.sh  lin_start_site.sh  mailslurp_test.py  main.py  passwordKeepers_passwordTable.sql  password_analysis_helper.py  password_checker.py  password_generator.py  password_generator_helper.py  policy_check.py  pyproject.toml  regression_check.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  style.css  test_regression.py  username_checker.py  win_cmdline.bat  win_mail.bat  win_start_site.bat
.github/: CODEOWNERS  dependabot.yml
.github/linters/: .flake8  .jscpd.json  .python-black  .shellcheckrc  .sql-config.json  .stylelintrc.json
.github/workflows/: clean_workflows.yml  linter.yml  manually_lint.yml  pytest.yml  uv-lock-sync.yml
example_passwords/: invalid_passwords.txt  valid_passwords.txt
examples/: example_random_passwords.txt  example_valid_passwords.txt
python_scripts/: alg_redux.py  cmdline_driver.py  database_controller.py  email_service.py  main.py  password_analysis_helper.py  password_checker.py  password_generator.py  password_generator_helper.py  username_checker.py
scripts/: password_checker.py  password_generator.py
static/: style.css  validate.js
templates/: 404.html  404.html.jinja  about.html  about.html.jinja  admin.html  admin.html.jinja  base.html  base.html.jinja  index.html  index.html.jinja  login.html  logout.html  logout.html.jinja  settings.html  settings.html.jinja
tests/: local_test_mail_service.py  local_test_regression_check.py  qunit_test.html  test_database_controller.py  test_example_passwords.py  test_main.py  test_password_analysis_helper.py  test_password_checker.py  test_username_checker.py
tests/local_tests/: test_database_controller.py
web/: INSTALL.md  README.md  __init__.py  about.html  add_account.php  admin.html  auth_system.py  index.html  login.php  logout.php  main.js  settings.html  style.css  validate.js  validate.test.js
web/static/: validate.test.js
web/templates/: about.html.jinja  login.html.jinja
